--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -6,6 +6,7 @@ html {
 body {
   background-color: white;
   font-family: 'Roboto' sans-serif;
+  font-weight: bold;
   margin: 0;
   width: 1280px;
   height: auto;
@@ -210,24 +211,23 @@ position: relative;
   align-items: center;
   left: calc(50% - 40px);
   top: calc(50% - 40px);
-  animation-name: whiteladya;
-  animation-duration: 2s;
+  animation: whiteladya 2s linear infinite;
   animation-play-state: paused;
 }
 
 .whiteladya {
 height: 160px;
-width: 640px;
+width: 480px;
 }
 
-.whiteladya:hover {
+.whiteladya:hover .image1 {
 animation-play-state: running;
 }
 
 @keyframes whiteladya {
-  0% {top: 1em; left: 0.2em;}
-  33% {top: 1em; left: 1.2em; }
-  100% {top: 1em; left: 2em; }
+  0% {top: 1.1em; left: 1em;}
+  33% {top: 1.1em; left: 34em; }
+  100% {top: 1.1em; left: 67em; }
 }
 
 .image2 {
@@ -243,15 +243,15 @@ animation-play-state: running;
   animation-play-state: paused;
 }
 
-.image2:hover {
+.koroleva:hover .image2 {
   animation-play-state: running;
 }
 
 @keyframes koroleva {
   0% {top: 2.1em; left: 2.5em;}
-    33% {top: 1px; left: 2.5px; }
-    66% {top: .1px; left: 2.5px; }
-    100% {top: .01px; left: 2px; }
+    33% {top: .2px; left: 2.5px; }
+    66% {top: .08px; left: 2.5px; }
+    100% {top: .001px; left: 2px; }
 }
 
 #image3 {
@@ -434,7 +434,7 @@ animation-play-state: running;
 100% {transform: rotate(360deg);}
 }
 
-#image11 {
+.image11 {
   position: relative;
   width: 60.78px;
   height: 75.08px;
@@ -443,10 +443,27 @@ animation-play-state: running;
   align-items: center;
   left: calc(50% - 36px);
   top: calc(50% - 40px);
+  animation: blackqueen 2s linear infinite;
+  animation-play-state: paused;
 
 }
 
-#image12 {
+.blackqueen {
+  width: 320px;
+  height: 320px;
+}
+
+.blackqueen:hover .image11 {
+  animantion-play-state: running;
+}
+
+@keyframes blackqueen {
+  0% {top: 1.1em; left: 1em;}
+  33% {top: 1.1em; left: 34em; }
+  100% {top: 1.1em; left: 67em; }
+}
+
+.image12 {
   position: relative;
   width: 70.3px;
   height: 68.69px;
