--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -251,7 +251,7 @@ animation-play-state: running;
   0% {top: 2.1em; left: 2.5em;}
     33% {top: .2px; left: 2.5px; }
     66% {top: .08px; left: 2.5px; }
-    100% {top: .001px; left: 2px; }
+    100% {top: .01px; left: 2px; }
 }
 
 #image3 {
@@ -434,7 +434,7 @@ animation-play-state: running;
 100% {transform: rotate(360deg);}
 }
 
-.image11 {
+#image11 {
   position: relative;
   width: 60.78px;
   height: 75.08px;
@@ -453,8 +453,8 @@ animation-play-state: running;
   height: 320px;
 }
 
-.blackqueen:hover .image11 {
-  animantion-play-state: running;
+.blackqueen:hover #image11 {
+  animantion-play-state: running
 }
 
 @keyframes blackqueen {
@@ -463,7 +463,7 @@ animation-play-state: running;
   100% {top: 1.1em; left: 67em; }
 }
 
-.image12 {
+#image12 {
   position: relative;
   width: 70.3px;
   height: 68.69px;
@@ -489,12 +489,13 @@ animation-play-state: running;
 }
 
 .phonenumber {
-  position: absolute;
+  position: relative;
   width: 186px;
   z-index: 18;
 }
 .zhdyom {
-  position: absolute;
+  position: relative;
+  left: 0;
   width: 778px;
-  z-index: 19;
+  z-index: 100;
 }
