--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -434,7 +434,7 @@ animation-play-state: running;
 100% {transform: rotate(360deg);}
 }
 
-#image11 {
+.image11 {
   position: relative;
   width: 60.78px;
   height: 75.08px;
@@ -442,6 +442,36 @@ animation-play-state: running;
   display: inline-block;
   align-items: center;
   left: calc(50% - 36px);
+  top: calc(50% - 40px);
+  animation: horse 2s linear infinite;
+  animation-play-state: paused;
+
+}
+
+.horse {
+  width: 480px;
+  height: 320px;
+}
+
+.horse:hover .image11 {
+  animantion-play-state: running;
+}
+
+@keyframes horse {
+  0% {top: 3101px; left: 841px;}
+  33% {top: 2941px; left: 841px; }
+  66% {top: 2941px; left: 2941px;}
+  100% {top: 2941px; left: 1161px; }
+}
+
+.image12 {
+  position: relative;
+  width: 70.3px;
+  height: 68.69px;
+  justify-content: center;
+  display: inline-block;
+  align-self: center;
+  left: calc(50% - 40px);
   top: calc(50% - 40px);
   animation: blackqueen 2s linear infinite;
   animation-play-state: paused;
@@ -453,26 +483,14 @@ animation-play-state: running;
   height: 320px;
 }
 
-.blackqueen:hover #image11 {
+.blackqueen:hover .image12 {
   animantion-play-state: running
 }
 
-@keyframes blackqueen {
+@keyframes blackqeen {
   0% {top: 1.1em; left: 1em;}
   33% {top: 1.1em; left: 34em; }
   100% {top: 1.1em; left: 67em; }
-}
-
-#image12 {
-  position: relative;
-  width: 70.3px;
-  height: 68.69px;
-  justify-content: center;
-  display: inline-block;
-  align-self: center;
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
-
 }
 
 .lastsquares {
@@ -495,7 +513,6 @@ animation-play-state: running;
 }
 .zhdyom {
   position: relative;
-  left: 0;
   width: 778px;
   z-index: 100;
 }
