--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -233,7 +233,7 @@ animation-play-state: running;
 }
 
 .image2 {
-  position: relative;
+  position: absolute;
   width: 81px;
   height: 79.15px;
   justify-content: center;
@@ -287,7 +287,7 @@ animation-play-state: running;
   justify-content: center;
   display: inline-block;
   left: calc(50% - 110px);
-  top: calc(50% - 100px);
+  top: calc(50% - 110px);
   animation-name: rotateimage4;
   animation-duration: 1s;
   animation-play-state: paused;
@@ -309,7 +309,7 @@ animation-play-state: running;
   justify-content: center;
   display: inline-block;
   left: calc(50% - 90px);
-  top: calc(50% - 100px);
+  top: calc(50% - 110px);
   animation-name: rotateimage5;
   animation-duration: 1s;
   animation-play-state: paused;
@@ -397,7 +397,7 @@ animation-play-state: running;
   justify-content: center;
   display: inline-block;
   left: calc(50% - 76px);
-  top: calc(50% - 130px);
+  top: calc(50% - 110px);
   animation-name: rotateimage9;
   animation-duration: 1s;
   animation-play-state: paused;
@@ -420,7 +420,7 @@ animation-play-state: running;
   justify-content: center;
   display: inline-block;
   left: calc(50% - 108px);
-  top: calc(50% - 150px);
+  top: calc(50% - 110px);
   animation-name: rotateimage10;
   animation-duration: 1s;
   animation-play-state: paused;
@@ -437,7 +437,7 @@ animation-play-state: running;
 }
 
 .image11 {
-  position: relative;
+  position: absolute;
   width: 60.78px;
   height: 75.08px;
   justify-self: center;
@@ -467,7 +467,7 @@ animation-play-state: running;
 }
 
 .image12 {
-  position: relative;
+  position: absolute;
   width: 70.3px;
   height: 68.69px;
   justify-content: center;
