--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -460,10 +460,10 @@ animation-play-state: running;
 }
 
 @keyframes horse {
-  0% {top: 3101px; left: 841px;}
-  33% {top: 2941px; left: 841px; }
-  66% {top: 2941px; left: 2941px;}
-  100% {top: 2941px; left: 1161px; }
+  0% {top: 1em; left: 2em;}
+  33% {top: .8em; left: 2em; }
+  66% {top: ; left: ;}
+  100% {top: ; left:; }
 }
 
 .image12 {
@@ -489,10 +489,10 @@ animation-play-state: running;
   animantion-play-state: running
 }
 
-@keyframes blackqeen {
+@keyframes blackqueen {
   0% {top: 1.1em; left: 1em;}
-  33% {top: 1.1em; left: 34em; }
-  100% {top: 1.1em; left: 67em; }
+  33% {top: 2.1em; left: 34em; }
+  100% {top: 3.1em; left: 67em; }
 }
 
 .lastsquares {
