--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -106,11 +106,12 @@ h1 {
 @media only screen  and (max-device-width: 375px)  {
 
   #bubbletext {
-    font-size: .75em;
+    font-size: 24px;
+    padding: 0;
   }
 
   .littlesquares {
-    width: 100vw;
+    width: 80px;
     height: 80px;
   }
 
