--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -75,15 +75,15 @@ body {
   position: absolute;
   left: 28em;
   top: 16em;
-  z-index: 101;
+  z-index: 500;
   display: inline-block;
 }
 
 .triangle5 {
   position: absolute;
-  left: 800px;
-  top: 1666,29px;
-  z-index: 120;
+  left: 40em;
+  top: 17em;
+  z-index: 1000;
   display: inline-block;
 }
 
@@ -118,7 +118,7 @@ body {
   background-color: #FFC6C6;
   width: 894px;
   height: 320px;
-  z-index: 90;
+  z-index: 501;
   left: 321px;
   top: 960px;
   position: absolute;
@@ -129,7 +129,7 @@ body {
   background-color: #FFFF;
   width: 897px;
   height: 320px;
-  z-index: 7;
+  z-index: 400;
   left: 159px;
   top: 1280px;
   display: inline-block;
@@ -227,8 +227,8 @@ animation-play-state: running;
 }
 
 @keyframes whiteladya {
-  0% {top: 1.1em; left: 1em;}
-  100% {top: 1.1em; left: 34em; }
+  0% {top: 1.9em; left: 2.6em;}
+  100% {top: 1.9em; left: 23.65em; }
 
 }
 
@@ -240,8 +240,8 @@ animation-play-state: running;
   display: inline-block;
   left: calc(50% - 40px);
   top: calc(50% - 40px);
-  animation-name: koroleva;
-  animation-duration: 4s;
+  z-index: 160;
+  animation: koroleva 2s linear infinite;
   animation-play-state: paused;
 }
 
@@ -250,10 +250,9 @@ animation-play-state: running;
 }
 
 @keyframes koroleva {
-  0% {top: 2.1em; left: 2.5em;}
-    33% {top: .2px; left: 2.5px; }
-    66% {top: .08px; left: 2.5px; }
-    100% {top: .01px; left: 2px; }
+  0% {top: 2.1em; left: 2.48em;}
+  100% {top: 0.1em; left: 2.48em; }
+
 }
 
 #image3 {
