--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -55,10 +55,28 @@
   /* Ipad Pro*/
 @media only screen and (min-width: 1024px) and (max-width: 1440px) {
 
-#bubbletext {
-  font-size: 36px;
-}
+      #bubbletext {
+        font-size: 2.25rem;
+      }
 
+      .telshow {
+        display: none;
+      }
+
+      .littlesquares {
+        width: 100%;
+        height: 128px;
+      }
+
+      .littlesquare {
+        width: 128px;
+        height: 128px;
+      }
+
+      .bigsquare {
+        width: 256px;
+        height: 256px;
+      }
 
 }
 
@@ -69,11 +87,24 @@
     display: none;
   }
 
-h1 {
-
+#bubbletext {
     font-size: 1.5rem;
-    margin-left: 16px;
-    margin-top: 20px;
+
+  }
+
+  .littlesquares {
+    width: 100%;
+    height: 96px;
+  }
+
+  .littlesquare {
+    width: 96px;
+    height: 96px;
+  }
+
+  .bigsquare {
+    width: 192px;
+    height: 192px;
   }
 
   .item-bubble1 {
