--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -163,12 +163,11 @@ margin: 0;
 
 #bubbletext {
     font-size: 1.5rem;
-padding: 0;
-margin: 0;
+
   }
 
   .littlesquares {
-    width: 100%;
+    width: 100vw;
     height: 96px;
   }
 
@@ -240,12 +239,25 @@ margin: 0;
   width: 66,94px;
   height: 93,24px;
 }
-  .littlesquares {
+.triangle5 {
+  width: 63,9px;
+  height: 89,58px;
+}
+.triangle6 {
+  width: 59,97px;
+  height: 83,54px;
+}
+.triangle7 {
+  width: 63,9px;
+  height: 89,58px;
+}
+
+  /* .littlesquares {
     width: 100vw;
     height: 96px;
-  }
+  } */
 
-  .littlesquare {
+  /* .littlesquare {
     width: 95px;
     height:95px;
   }
@@ -258,7 +270,7 @@ margin: 0;
   .line1 {
     width: 192px;
     height: 192px;
-  }
+  } */
 }
 
 /* iphone se */
