--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -52,105 +52,59 @@
   }
 }
 
-/* Macbook Pro '13 */
-@media only screen and (min-width: 1280px) and (max-width: 1366px) {
-
-
+@media only screen and (min-width: 1280px) and (max-width: 1440px) {
   #bubbletext {
-    font-size: 3rem;
-  }
-
-    .telshow {
-    display: none;
-    }
-
-}
-
-
-
-  /* Ipad Pro*/
-@media only screen and (min-width: 1024px) and (max-width: 1440px) {
-
-  .telshow{
-    display: none;
-  }
-
-#bubbletext {
     font-size: 2.25rem;
-    padding: 0;
-    margin: 0;
+  }
+
+  .telshow {
+    display: none;
   }
 
   .littlesquares {
     width: 100%;
-    height: 128px;
+    height: 160px;
   }
 
   .littlesquare {
-    width: 128px;
-    height: 128px;
+    width: 160px;
+    height: 160px;
   }
 
   .bigsquare {
-    width: 256px;
-    height: 256px;
+    width: 320px;
+    height: 320px;
   }
 
-  .item-bubble1 {
-    width: 610px;
-    height: 256px;
-  }
-
-  .item-bubble2 {
-    width: 342px;
-    height: 127px;
-
-  }
-
-  .item-bubble3 {
-    width: 341px;
-    height: 128px;
-  }
-
-  .item-bubble4 {
-    width: 714px;
-    height: 256px;
-  }
-
-  .item-bubble5 {
-    width: 716px;
-    height: 255px;
-  }
-
-  .item-bubble6 {
-    width: 539px;
-    height: 128px;
-  }
-
-  .item-bubble7 {
-    width: 714px;
-    height: 198px;
-  }
-
-.triangle1 {
-  width: 103,46px;
-  height: 144,11px;
-}
-
-.triangle2 {
-  width: 85,21px;
-  height: 119,45px;
-}
-.triangle3 {
-  width: 79,97px;
-  height: 111,4px;
-}
-.triangle4 {
-  width: 89,26px;
-  height: 124,33px;
 }
 
 
+}
+  /* Ipad Pro*/
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+
+      #bubbletext {
+        font-size: 2.25rem;
+      }
+
+      .telshow {
+        display: none;
+      }
+
+      .littlesquares {
+        width: 100%;
+        height: 128px;
+      }
+
+      .littlesquare {
+        width: 128px;
+        height: 128px;
+      }
+
+      .bigsquare {
+        width: 256px;
+        height: 256px;
+      }
 
 }
 
@@ -161,13 +115,14 @@
     display: none;
   }
 
-    #bubbletext {
+#bubbletext {
     font-size: 1.5rem;
-
+padding: 0;
+margin: 0;
   }
 
   .littlesquares {
-    width: 100vw;
+    width: 100%;
     height: 96px;
   }
 
@@ -176,20 +131,7 @@
     height: 96px;
   }
 
-
-    .bigsquares {
-      width: 100vw;
-      height: 192px;
-    }
-
   .bigsquare {
-    width: 192px;
-    height: 192px;
-  }
-
-
-  .line1,
-  .line2 {
     width: 192px;
     height: 192px;
   }
@@ -246,25 +188,12 @@
   width: 66,94px;
   height: 93,24px;
 }
-.triangle5 {
-  width: 63,9px;
-  height: 89,58px;
-}
-.triangle6 {
-  width: 59,97px;
-  height: 83,54px;
-}
-.triangle7 {
-  width: 63,9px;
-  height: 89,58px;
-}
-
-.lastsquares {
+  .littlesquares {
     width: 100vw;
     height: 96px;
   }
 
-  /* .littlesquare {
+  .littlesquare {
     width: 95px;
     height:95px;
   }
@@ -277,7 +206,7 @@
   .line1 {
     width: 192px;
     height: 192px;
-  } */
+  }
 }
 
 /* iphone se */
