--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -106,6 +106,10 @@
         height: 256px;
       }
 
+      .lastsquares {
+        width: 100%;
+        height: 128px;
+      }
 }
 
 /* ipad portrait */
