--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -118,8 +118,7 @@
 
     #bubbletext {
         font-size: 1.5rem;
-    padding: 0;
-    margin: 0;
+
       }
 
   .littlesquares {
@@ -137,37 +136,37 @@
     height: 192px;
   }
 
-  .item-bubble1 {
+  .item_bubble1 {
     width: 458px;
     height: 192px;
   }
-  .item-bubble2 {
+  .item_bubble2 {
     width: 256px;
     height: 96px;
 
   }
 
-  .item-bubble3 {
+  .item_bubble3 {
     width: 256px;
     height: 96px;
   }
 
-  .item-bubble4 {
+  .item_bubble4 {
     width: 536px;
     height: 190px;
   }
 
-  .item-bubble5 {
+  .item_bubble5 {
     width: 537px;
     height: 192px;
   }
 
-  .item-bubble6 {
+  .item_bubble6 {
     width: 404px;
     height: 96px;
   }
 
-  .item-bubble7 {
+  .item_bubble7 {
     width: 535px;
     height: 149px;
   }
@@ -189,7 +188,19 @@
   width: 66,94px;
   height: 93,24px;
 }
-  .littlesquares {
+
+.lastsquares {
+  width: 100%;
+  height: 96px;
+}
+
+.basmannaya {
+  font-size: 0.75rem;
+}
+.zhdyom {
+  font-size: 1.5rem;
+}
+  /* .littlesquares {
     width: 100vw;
     height: 96px;
   }
@@ -207,21 +218,38 @@
   .line1 {
     width: 192px;
     height: 192px;
-  }
+  } */
 }
 
+  /* iPhone X */
+@media only screen and (min-device-width: 375px) and (max-device-width: 480px) {
+
+    #bubbletext {
+      font-size: 1rem;
+    }
+
+
+    .ls {
+      display: none;
+    }
+
+    .bs {
+      display: none;
+    }
+}
+
+
 /* iphone se */
-@media only screen and (max-device-width: 375px)  {
+@media only screen and (max-width: 375px)  {
 
   #bubbletext {
     font-size: 1rem;
-    padding: 0;
-    margin: 0;
   }
 
 .ls {
   display: none;
 }
+
   .littlesquares {
     width: 100vw;
     height: 80px;
@@ -232,7 +260,7 @@
     height: 80px;
   }
 
-  .item-bubble1 {
+  .item_bubble1 {
     width: 217px;
     height: 91px;
     top: 0;
@@ -243,34 +271,34 @@
     height: 51,4px;
     top: .2em;
   }
-  .item-bubble2 {
+  .item_bubble2 {
     width: 126px;
     height: 47px;
     top: 3em;
     left: 1.5em;
   }
 
-  .item-bubble3 {
+  .item_bubble3 {
     width: 125px;
     height: 47px;
   }
 
-  .item-bubble4 {
+  .item_bubble4 {
     width: 230px;
     height: 91px;
   }
 
-  .item-bubble5 {
+  .item_bubble5 {
     width: 251px;
     height: 91px;
   }
 
-  .item-bubble6 {
+  .item_bubble6 {
     width: 177px;
     height: 47px;
   }
 
-  .item-bubble7 {
+  .item_bubble7 {
     width: 535px;
     height: 149px;
   }
@@ -285,16 +313,25 @@
     height: 160px;
   }
 
-.bs {
+  .line2 {
+    display: none;
+  }
+
+  .lastsquares {
+    width: 100%;
+    height: 80px;
+  }
+
+  .bs {
+    display: none;
+  }
+
+  .image1 {
   display: none;
-}
+  }
 
-.image1 {
-display: none;
-}
-
-.image2 {
-display: none;
-}
+  .image2 {
+  display: none;
+  }
 
 }
