--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -240,7 +240,7 @@
 
 
 /* iphone se */
-@media only screen and (max-width: 375px)  {
+@media only screen and (min-width: 320px) and (max-width: 375px)  {
 
   #bubbletext {
     font-size: 1rem;
