--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -339,6 +339,14 @@
     left: 2.4em;
   }
 
+  .triangle5 {
+    display: inline-block;
+    width: 30.44px;
+    height: 42.67px;
+    top: 4.4em;
+    left: 2.9em;
+  }
+
   .item_bubble6 {
     width: 177px;
     height: 47px;
@@ -354,14 +362,27 @@
     height: 160px;
   }
 
-  .line1 {
-    width: 50%;
-    height: 160px;
-    left: -10em;
+.telbigsquares {
+  width: 100%;
+  height: 320px;
+}
+
+  .telline1 {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: relative;
   }
 
-  .line2 {
-    display: none;
+  .telline2 {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: relative;
   }
 
   .lastsquares {
@@ -409,5 +430,7 @@
     width: 40px;
     height: 40px;
   }
+
+
 
 }
