--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -112,17 +112,26 @@
 /* ipad portrait */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
-  .telshow{
-    display: none;
+.telshow {
+  display: none;
+}
+
+  .bubbletext {
+    font-size: 1.5rem;
+
   }
 
-    .bubbletext {
-        font-size: 1.5rem;
+  .bubbletext {
+  top: 1em;
 
-      }
+  }
+
+
+
+
 
   .littlesquares {
-    width: 100%;
+    width: 100vw;
     height: 96px;
   }
 
@@ -131,39 +140,83 @@
     height: 96px;
   }
 
-  .bigsquare {
-    width: 192px;
-    height: 192px;
-  }
-
   .item_bubble1 {
     width: 458px;
     height: 192px;
+    top: 0;
+    left:5em;
+  }
+
+  .triangle1 {
+    display: inline-block;
+    width: 36px;
+    height: 51px;
+    top: 4em;
+    left: 1em;
+
   }
   .item_bubble2 {
     width: 256px;
-    height: 96px;
-
+    height: 97px;
+    top: 7em;
+    left: 5.04em;
   }
 
+  .triangle2 {
+    display: inline-block;
+    width: 31.62px;
+    height: 44.33px;
+    top: 1.4em;
+    left: 1em;
+  }
   .item_bubble3 {
     width: 256px;
-    height: 96px;
+    height: 95px;
+    top: 12.1em;
+    left: 9.93em;
+  }
+
+  .triangle3 {
+    display: inline-block;
+    width: 29.26px;
+    height: 40.75px;
+    top: 1.4em;
+    left: 1em;
   }
 
   .item_bubble4 {
-    width: 536px;
-    height: 190px;
+    width: 230px;
+    height: 91px;
+    top: 17.2em;
+    left: 4.968749em;
+  }
+
+  .triangle4 {
+    display: inline-block;
+    width: 36.9px;
+    height: 51.4px;
+    top: 4em;
+    left: 1em;
   }
 
   .item_bubble5 {
-    width: 537px;
-    height: 192px;
+    width: 251px;
+    height: 91px;
+    top: 22.9em;
+    left: 2.4em;
+  }
+
+  .triangle5 {
+    display: inline-block;
+    width: 30.44px;
+    height: 42.67px;
+    top: 4.4em;
+    left: 2.9em;
   }
 
   .item_bubble6 {
-    width: 404px;
-    height: 96px;
+    width: 177px;
+    height: 47px;
   }
 
   .item_bubble7 {
@@ -171,28 +224,39 @@
     height: 149px;
   }
 
-.triangle1 {
-  width: 77,59px;
-  height: 108,08px;
-}
+  .bigsquare {
+    width: 160px;
+    height: 160px;
+  }
 
-.triangle2 {
-  width: 63,9px;
-  height: 89,58px;
-}
-.triangle3 {
-  width: 59,97px;
-  height: 83,54px;
-}
-.triangle4 {
-  width: 66,94px;
-  height: 93,24px;
-}
-
-.lastsquares {
+.telbigsquares {
   width: 100%;
-  height: 96px;
+  height: 160px;
 }
+
+  .telline1 {
+    width: 100%;
+    height: 320px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: relative;
+  }
+
+  .telline2 {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    position: relative;
+  }
+
+  .lastsquares {
+    width: 100%;
+    height: 80px;
+  }
 
 .basmannaya {
   font-size: 0.75rem;
