--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -216,17 +216,24 @@
   }
 
   .item_bubble6 {
-    width: 177px;
-    height: 47px;
+    width: 404px;
+    height: 96px;
+    top: 60em;
+    left: 17.2em;
   }
 
   .triangle6 {
     display: inline-block;
     width: 59.97px;
     height: 83.54px;
-    top: 4.4em;
+    top: 3.56em;
     left: 2.9em;
   }
+
+.bubbletext6 {
+margin-left: 3px;
+margin-top: 4px;
+}
 
   .item_bubble7 {
     width: 535px;
@@ -241,39 +248,19 @@
     left: 2.9em;
   }
 
-
-  .bigsquare {
-    width: 160px;
-    height: 160px;
-  }
-
-.telbigsquares {
-  width: 100%;
-  height: 160px;
+.bigsquares {
+  width: 100vw;
+  height: 192px;
 }
 
-  .telline1 {
-    width: 100%;
-    height: 320px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    position: relative;
-  }
-
-  .telline2 {
-    width: 100%;
-    height: 320px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    position: relative;
+  .bigsquare {
+    width: 192px;
+    height: 192px;
   }
 
   .lastsquares {
     width: 100%;
-    height: 80px;
+    height: 96px;
   }
 
 .basmannaya {
