--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -24,6 +24,13 @@ body {
   z-index: 2000;
 }
 
+.bubbletext2 {
+    font-size: 3rem;
+    line-height: 160px;
+    margin-left: 61px;
+    margin-top: 4px;
+}
+
 .bubbletext3 {
     font-size: 3rem;
     line-height: 160px;
@@ -487,13 +494,13 @@ animation-play-state: running;
 100% {transform: rotate(-360deg);}
 }
 
-.image11 {
+#image11 {
   position: absolute;
-  width: 60.78px;
-  height: 75.08px;
-  justify-self: center;
+  width: 77.23px;
+  height: 94px;
+  justify-content: center;
   display: inline-block;
-  align-items: center;
+
   left: calc(50% - 36px);
   top: calc(50% - 40px);
   animation: horse 2s linear infinite;
@@ -511,21 +518,16 @@ animation-play-state: running;
   animantion-play-state: running;
 }
 
-@keyframes horse {
-  0% {top: 1em; left: 2em;}
-  33% {top: .8em; left: 2em; }
 
-}
-
-.image12 {
+#image12 {
   position: absolute;
-  width: 70.3px;
-  height: 68.69px;
+  width: 88px;
+  height: 86px;
   justify-content: center;
   display: inline-block;
-  align-self: center;
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
+
+  left: calc(50% - 60px);
+  top: calc(50% - 60px);
   animation: blackqueen 2s linear infinite;
   animation-play-state: paused;
 
