--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -114,7 +114,7 @@ body {
 .triangle7 {
   position: absolute;
   left: 42em;
-  top: 2074,2px;
+  top: 12.4em;
   z-index: 25;
   display: inline-block;
 }
@@ -500,7 +500,7 @@ animation-play-state: running;
   height: 94px;
   justify-content: center;
   display: inline-block;
-
+  z-index: 600;
   left: calc(50% - 36px);
   top: calc(50% - 40px);
   animation: horse 2s linear infinite;
@@ -509,15 +509,22 @@ animation-play-state: running;
 }
 
 .horse {
-  width: 480px;
-  height: 320px;
+  width: 320px;
+  height: 480px;
 }
 
-.horse:hover .image11 {
+.horse:hover #image11 {
   cursor: pointer;
-  animantion-play-state: running;
+  animation-play-state: running;
 }
 
+@keyframes horse {
+  0% {top: 1.1em; left: 2.3em;}
+  33% {top: 200px; left: 2.3em; }
+  66% {top: 350px; left: 2.3em; }
+  100% {top: 350px; left: -130px; }
+
+}
 
 #image12 {
   position: absolute;
@@ -540,7 +547,7 @@ animation-play-state: running;
 
 .blackqueen:hover .image12 {
   cursor: pointer;
-  animantion-play-state: running
+  animation-play-state: running;
 }
 
 @keyframes blackqueen {
