--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -545,7 +545,7 @@ animation-play-state: running;
   height: 320px;
 }
 
-.blackqueen:hover .image12 {
+.blackqueen:hover #image12 {
   cursor: pointer;
   animation-play-state: running;
 }
