--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -15,6 +15,7 @@
 
 @media only screen (min-width: 1680px) and (max-width: 1920px) {
 
+
 .bubbletext {
   font-size: 61px;
 }
@@ -54,6 +55,10 @@
 
 @media only screen and (min-width: 1280px) and (max-width: 1440px) {
 
+.zhdyom {
+  margin-left: 4.6em;
+  margin-top: 0;
+}
   .telshow {
     display: none;
   }
@@ -107,6 +112,21 @@
         width: 100%;
         height: 128px;
       }
+
+      .basmannaya {
+        font-size: 18px;
+
+
+      }
+   .phonenumber {
+     font-size: 18px;
+
+   }
+      .zhdyom {
+        font-size: 36px;
+        margin-left: 6em;
+        margin-top: 0;
+      }
 }
 
 /* ipad portrait */
@@ -121,7 +141,12 @@
     line-height: 1.2em;
     margin-top: 2em;
   }
-
+.basmannaya {
+  font-size: 12px;
+}
+.zhdyom {
+  font-size: 24px;
+}
 #image1 {
   width: 40%;
   height: 40%;
@@ -272,12 +297,25 @@
   }
 
   .item_bubble6 {
+    width: 537px;
+    height: 192px;
+    top: 60em;
+    left: 17.2em;
+  }
+
+  .item_bubble7 {
+    width: 535px;
+    height: 149px;
+    top: 70em;
+    left: 15em;
+  }
+
+  .item_bubble6 {
     width: 404px;
     height: 96px;
     top: 60em;
     left: 17.2em;
   }
-
   .triangle6 {
     display: inline-block;
     width: 59.97px;
